package com.examen_5.Ejercicio_1.Entrega_4.Restaurantes.Vista;

import com.examen_5.Ejercicio_1.Entrega_4.Restaurantes.ComponenteRestaurante;

public class VistaRestaurante {
    public void imprimirDetalles(ComponenteRestaurante componenteRestaurante) {
        componenteRestaurante.mostrarDetalles();
    }
}

